[package]
name = "rig-core"
version.workspace = true
edition = { workspace = true }
license = "MIT"
readme = "README.md"
description = "An opinionated library for building LLM powered applications."
repository = "https://github.com/0xPlaygrounds/rig"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[lib]
name = "rig_core"
path = "src/lib.rs"
doctest = true

[dependencies]
as-any = { workspace = true }
async-stream = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
epub = { workspace = true, optional = true }
futures = { workspace = true }
glob = { workspace = true }
indexmap = { workspace = true }
lopdf = { workspace = true, optional = true }
mime_guess = { workspace = true }
ordered-float = { workspace = true }
quick-xml = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json", "stream", "multipart"] }
rig-derive = { version = "0.39.0", path = "../rig-derive", optional = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
rmcp = { workspace = true, optional = true, features = ["client"] }
tokio = { workspace = true, features = ["rt", "sync"] }
http = { workspace = true }
tracing-futures = { workspace = true, features = ["futures-03"] }
serenity = { workspace = true, optional = true }
fastrand = { workspace = true }
eventsource-stream = { workspace = true }
pin-project-lite = { workspace = true }
futures-timer = { workspace = true }
wasm-bindgen-futures = { workspace = true, optional = true }
mime = { workspace = true }
reqwest-middleware = { workspace = true, optional = true, features = [
  "json",
  "multipart",
  "charset",
  "http2",
] }

# Native-only dependency for OpenAI Responses websocket mode.
# Keeping it target-scoped avoids pulling a tokio socket transport into wasm builds.
[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio-tungstenite = { workspace = true, optional = true }

# futures-timer's default backend uses a background timer thread, which cannot
# drive timers on wasm. Pull in its wasm-bindgen (setTimeout) backend whenever
# the target is browser wasm — regardless of feature flags — so
# `wasm_compat::timeout` and the SSE retry backoff actually fire instead of
# hanging. Scoped to `target_os = "unknown"` (browser) rather than the whole
# `wasm` family because the gloo-timers/setTimeout backend needs a JS host and
# would be wrong-by-construction on WASI.
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
futures-timer = { workspace = true, features = ["wasm-bindgen"] }

[dev-dependencies]
anyhow = { workspace = true }
assert_fs = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio-test = { workspace = true }
redis = { workspace = true, features = ["tokio-comp", "aio", "vector-sets"] }
serde_path_to_error = { workspace = true }
base64 = { workspace = true }
reqwest-retry = { workspace = true }
reqwest-middleware = { workspace = true, features = [
  "json",
  "multipart",
  "charset",
  "http2",
  "rustls",
] }

# Required for `rmcp` example
hyper-util = { workspace = true, features = ["service", "server"] }
rmcp = { workspace = true, features = [
  "client",
  "macros",
  "reqwest",                                  # required for some strange reason
  "transport-streamable-http-client",
  "transport-streamable-http-client-reqwest",
  "transport-streamable-http-server-session",
  "transport-streamable-http-server",
  "transport-worker",
] }
axum = { workspace = true }

# required for otel
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }


[features]
default = ["reqwest", "derive", "rustls"]
audio = []
image = []
derive = ["dep:rig-derive"]
experimental = []
test-utils = []
discord-bot = ["dep:serenity"]
pdf = ["dep:lopdf"]
epub = ["dep:epub", "dep:quick-xml"]
rayon = ["dep:rayon"]
wasm = [
  "dep:wasm-bindgen-futures",
]
rmcp = ["dep:rmcp"]
socks = ["reqwest/socks"]
reqwest = [
  "reqwest/charset",
  "reqwest/http2",
  "reqwest/system-proxy",
]
websocket = ["websocket-rustls"]
websocket-rustls = [
  "dep:tokio-tungstenite",
  "tokio-tungstenite/connect",
  "rustls",
]
websocket-native-tls = [
  "dep:tokio-tungstenite",
  "tokio-tungstenite/connect",
  "native-tls",
]
rustls = ["reqwest/rustls", "tokio-tungstenite?/rustls-tls-webpki-roots"]
native-tls = ["reqwest/native-tls", "tokio-tungstenite?/native-tls"]
reqwest-middleware = ["reqwest-middleware-rustls"]
reqwest-middleware-rustls = ["dep:reqwest-middleware", "rustls", "reqwest-middleware/rustls"]
reqwest-middleware-native-tls = ["dep:reqwest-middleware", "native-tls"]
